tests/unmatched-close-comment/out.txt
error: unmatched close comment
  ┌─ inp.sml:1:11
  │
1 │ val x = 3 *)
  │           ^^

lexing failed
